# lab1_qt20_mvc

./: .gitignore  CMakeLists.txt  README.md  lab1_Qt20_2026.docx  mainwindow.cpp  mainwindow.h  mydelegate.cpp  mydelegate.h  mymodel.cpp  mymodel.h
.github/workflows/: ci-windows-mingw.yml
tests/: CMakeLists.txt  test_mainwindow.cpp  test_mydelegate.cpp  test_mymodel.cpp  test_myrect.cpp  tst_mainwindow.cpp  tst_mydelegate.cpp  tst_mymodel.cpp  tst_myrect.cpp
